Bug 6828 - Changed the device info XBL to wrap the playback formats text. r=matt
git-svn-id: http://publicsvn.songbirdnest.com/client/trunk@8349 5aad4ff5-4b58-4159-ba3f-0e6328df4cad

--- a/app/skin/bindings/device/deviceInfo.css
+++ b/app/skin/bindings/device/deviceInfo.css
@@ -46,6 +46,7 @@ Imported by bindings.css or directly into feathers.
 .device-specs-grid-label
 {
   font-size:110%;
+  max-width:200px;
 }
 
 .device-model-icon
